<resources>
    <string name="app_name">King of Gainz</string>
    <string name="age">Age</string>
    <string name="sex">Sex</string>
    <string name="height">Height (cm)</string>
    <string name="weight">Weight (kg)</string>
    <string name="activity">Activity</string>
    <string name="save">Save</string>
    <string-array name="sex">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="activity">
        <item>Lightly Active (moderate exercise and sedentary job)</item>
        <item>Moderately Active (intense exercise and sedentary job)</item>
        <item>Very Active (moderate exercise and active job)</item>
        <item>Extra Active (intense exercise and active job)</item>
    </string-array>
    <string name="add_meal_activity">Add Meal / Activity</string>
    <string name="stats">Stats</string>
    <string name="about">About</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="submit">Submit</string>
</resources>
