<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <View
        android:id="@+id/centerVerticalShim"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_centerVertical="true"
        android:visibility="invisible" />

    <View
        android:id="@+id/centerHorizontalShim"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/centerVerticalShim"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/centerHorizontalShim"
        android:background="@drawable/border_around_text_view"
        android:gravity="center"
        android:text="@string/add_meal_activity"
        android:textColor="@color/electricBlue"
        android:textSize="18sp"
        android:clickable="true"
        android:onClick="addMealOrActivity"
        android:focusable="true">
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/centerVerticalShim"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/centerHorizontalShim"
        android:background="@drawable/border_around_text_view"
        android:gravity="center"
        android:text="@string/stats"
        android:textColor="@color/highlightedYellow"
        android:textSize="18sp"
        android:clickable="true"
        android:onClick="openStats"
        android:focusable="true">
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/centerVerticalShim"
        android:layout_toLeftOf="@+id/centerHorizontalShim"
        android:background="@drawable/border_around_text_view"
        android:gravity="center"
        android:text="@string/about"
        android:textColor="@color/vibrantRed"
        android:textSize="18sp"
        android:clickable="true"
        android:onClick="showAbout"
        android:focusable="true">
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/centerVerticalShim"
        android:layout_toRightOf="@+id/centerHorizontalShim"
        android:background="@drawable/border_around_text_view"
        android:gravity="center"
        android:text="@string/edit_profile"
        android:textColor="@color/limeGreen"
        android:textSize="18sp"
        android:clickable="true"
        android:onClick="editProfile"
        android:focusable="true">
    </TextView></RelativeLayout>